--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,9 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build
+        cache: 'yarn'
+    - run: yarn install --frozen-lockfile
+    - run: yarn build
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
