--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "eexar-test",
   "version": "0.0.0",
+  "license": "MIT",
+  "author": "Stefan Wawrzyn <swawrzyn@gmail.com> (https://www.github.com/swawrzyn/)",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit --skipLibCheck && vite build",
     "preview": "vite preview",
-    "test": "jest src"
+    "test": "jest"
   },
   "dependencies": {
+    "comlink": "^4.3.1",
     "vue": "^3.2.25"
   },
   "devDependencies": {
@@ -15,10 +18,15 @@
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
     "@vue/vue3-jest": "^27.0.0-alpha.4",
+    "autoprefixer": "^10.4.2",
     "jest": "^27.5.1",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.19",
     "ts-jest": "^27.1.3",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
+    "vite-plugin-comlink": "^2.1.0",
+    "vite-plugin-worker": "^1.0.5",
     "vue-tsc": "^0.29.8"
   }
 }
